[package]
name = "pinarcmutex"
version = "0.1.0"
authors = ["Jakob Degen <jakob.e.degen@gmail.com>"]
edition = "2018"
rust-version = "1.49"
description = "Provides a `PinArcMutex` type, for shared mutable access to pinned data"
repository = "https://github.com/JakobDegen/pinarcmutex"
readme = "crates-readme.md"
license = "MIT OR Apache-2.0"
categories = ['asynchronous', 'memory-management']

[dependencies]
tokio = { version = "1.0", features = ["sync"] }
